# linexProfiler

./: .firebaserc  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.py  dev_server.py  firebase.json  main.py  package.json  pyproject.toml  requirements.txt
backend/: config.py  dev_server.py  main.py  pyproject.toml  requirements.txt  server.py
backend/analysis/: card_matcher.py  feature_engine.py  preprocessor.py  profiler.py
backend/cards/: cards.json  catalog.py  upload_cards.py
backend/data/profile_catalogs/: v_239e81c2f5b6_9be72419632f.json  v_239e81c2f5b6_b06d3cc7e76a.json  v_5a8cd6da0cc4_9be72419632f.json  v_6f51b8eb1b25_9be72419632f.json  v_6f51b8eb1b25_b06d3cc7e76a.json  v_d27ac6585f3f_9be72419632f.json
backend/data/test-users/: test-user-12550.csv  test-user-12590.csv  test-user-12606.csv  (+17 more)
backend/handlers/: __init__.py  _common.py  analysis.py  chat.py  incentives.py  optimize.py  portfolios.py  profiles.py  test_users.py  workflows.py
backend/models/: features.py  incentive_set.py  monte_carlo.py  profile.py  profile_catalog.py  recommendation.py  transaction.py
backend/profile_generator/: __init__.py  assigner.py  deal_memo.py  experiment.py  feature_derivation.py  feature_transform.py  firestore_client.py  incentive_manager.py  monte_carlo.py  simulator.py  trainer.py  transitions.py  versioning.py
backend/prompts/: card_matching.py  profiling.py
backend/scripts/: migrate_test_users.py  migrate_to_firestore.py
backend/tests/: test_deal_memo.py  test_experiment.py  test_profile_generator.py
backend/utils/: formatters.py  toon.py
(+44 files in other folders)
